Fix #102526: Fix crash performing nested viewport drawing

Performing an off-screen draw call while drawing the viewport isn't
supported, add a check that raises an exception when called from Python
instead of crashing.

Ref: !118780