source/blender/editors/space_view3d/view3d_draw.cc
@@ -2155,6 +2155,11 @@ ImBuf *ED_view3d_draw_offscreen_imbuf_simple(Depsgraph *depsgraph,
                                         err_out);
 }
 
+bool ED_view3d_draw_offscreen_check_nested()
+{
+  return DRW_draw_in_progress();
+}
+
 /** \} */
 
 /* -------------------------------------------------------------------- */
